frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goappfrontend-service
  
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  selector:
    app:  goappfrontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
